--- a/whitecoatacademy/templates/donate.html
+++ b/whitecoatacademy/templates/donate.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
 {% block title %}Support Us{% endblock %}
 {% block tagline_text %}Help Open Medicine{% endblock %}
-{% block lead %}Donate and help us to create free medical resources{% endblock %}
+{% block lead %}Donate & help us create free medical resources{% endblock %}
 {% block maincontent %}
 <body>
 <div class="container">
