--- a/whitecoatacademy/templates/help.html
+++ b/whitecoatacademy/templates/help.html
@@ -1,7 +1,7 @@
 {% extends "_base.html" %}
 {% block title %}Help &amp; FAQ{% endblock %}
 {% block tagline_text %}Help &amp; FAQ{% endblock %}
-{% block lead %}Confused? Don't hesitate to e-mail us{% endblock %}
+{% block lead %}Confused? Please send us an e-mail{% endblock %}
 {% block maincontent %}
 <div class="container">
     <div class="row">
