--- a/whitecoatacademy/templates/index.html
+++ b/whitecoatacademy/templates/index.html
@@ -2,7 +2,7 @@
 {% block title %}Welcome to White Coat Academy{% endblock %}
 {# {% block jumbotron_class %}masthead{% endblock %} #}
 {% block tagline_text %}Welcome to White Coat Academy{% endblock %}
-{% block lead %}Opening Medical Education{% endblock %}
+{% block lead %}Making Medicine Easy{% endblock %}
 {% block extra_jumbotron %}{% endblock %}
 {% block maincontent %}
 <br>
@@ -31,7 +31,7 @@
     <div class="item-description">
         <h3>Welcome to White Coat Academy</h3>
         <div class="subtitle">
-            <span class="icon-file "></span><a href="#">Opening Medical knowledge</a>
+            <span class="icon-file "></span><a href="#">Helping You Understand Medicine</a>
         </div>
         <p>Our video lectures are designed for everyone, from people with no medical background to experienced physicians. For each condition we discuss:</p>
         <ul class="unstyled">
