Filler text, expand ClinDesk content and goals.

--- a/clindesk/templates/about.html
+++ b/clindesk/templates/about.html
@@ -22,19 +22,13 @@
         <div class="page-header">
           <h1>Our Philosophy</h1>
         </div>
-          <p class="lead">ClinDesk comprises a team of senior medical students and resident physicians who are deeply familiar with
-              medical knowledge and education. Our recent experiences in medical school have helped shape our view that
-              there is a disconnect between the training of physicians and the way patients learn about and understand
-              their health.</p>
-          <p class="lead">Our mission is to lead the transition of medical education from a proprietary to “open” process. We believe
-              this process should be scalable and agile -- health literacy should be accessible to everyone in a
-              context-appropriate fashion.</p>
-          <p class="lead">With that goal in mind, we have designed and built ClinDesk.org, a free video library that opens medical
-              education to patients and their families and friends. Our videos are organized by medical speciality and
-              specific disease, which walk you through the basic biology, “who and when” epidemiology, symptoms, and
-              treatment/outcomes of each condition you or someone you know might be facing.</p>
-          <p class="lead">We hope to clearly and concisely extend medical education to patients in an “open” fashion, providing them
-              with the most important information about diseases or conditions they may be confronted with.</p>
+          <p class="lead">Our mission is simple: to lead the transition of medical education from a proprietary to
+              an “open” process. Current medical education is broken, and far too few people have access to medical knowledge.</p>
+          <p class="lead">Through ClinDesk, Inc., a non-profit corporation, we hope to spawn many <a href="https://creativecommons.org/" target="_blank">Creative
+              Commons</a>-licensed works and expand the accessibility of medical resources. If you share our vision, and
+              you're interested in helping to open the closed state of medical education, please get in touch.</p>
+          <p class="lead">You can find some of our advocacy in the New England Journal of Medicine piece:
+              <a href="http://nejm200.nejm.org/essay/a-century-after-flexner-the-next-step-is-open/" target="_blank">A Century after Flexner, the Next Step is Open</a></p>
       </section>
 
 
