--- a/clindesk/templates/index.html
+++ b/clindesk/templates/index.html
@@ -5,15 +5,22 @@
 {% block lead %}Opening Medical Education{% endblock %}
 {% block extra_jumbotron %}{% endblock %}
 {% block maincontent %}
-<br>
+<br xmlns="http://www.w3.org/1999/html">
 <div class="container">
     <div class="row-fluid">
         <div class="span12">
             <div class="hero-unit">
             <p class="lead">Welcome:</p>
-            <p>ClinDesk comprises a team of senior medical students and resident physicians who are deeply familiar with medical knowledge and education. </p>
-            <p>Over the coming months, we'll be producing educational videos to walk patients and their families through diseases, from the basic biology &amp; epidemiology, to treatment options &amp; outcomes.</p>
-            <p>Together with our sister-site <a href="http://www.WhiteCoatAcademy.org/" target="_blank">White Coat Academy</a>, we hope to change the face of medical education.</p><br>
+            <p>ClinDesk comprises a team of senior medical students and resident physicians who passionate about opening the otherwise closed world of medical knowledge.</p>
+            <p>Soon, we'll be launching lots of Creative Commons-licensed medical resources, including:
+                <ul>
+                    <li>Free medical education videos, through our sister-site <a href="http://www.WhiteCoatAcademy.org/" target="_blank">White Coat Academy</a></li>
+                    <li>Open USMLE prep materials, including a Goljan-esque Step I review series</li>
+                    <li>A interactive physical exam tutorial, with key techniques and gunner-style facts (remember <a href="https://en.wikipedia.org/wiki/Duroziez%27s_sign" target="_blank">Duroziez's sign</a>?)</li>
+                    <li>An H&amp;P/SOAP note wizard, with hints on important acronyms and diagnostics</li>
+                </ul>
+            </p>
+            <p>Hopefully we can change the face of medical education. If you're interested in helping out, please get in touch!</p><br>
             <span style="float:right;"><img src="{{ static('img/logos/bottom-drop-banner.png') }}" height="120" width="600" alt="ClinDesk &amp; WhiteCoatAcademy" class="img-rounded img-polaroid"></span>
             <p>Stay tuned,</p>
             <p>Nick Semenkovich</p>
