--- a/clindesk/templates/_base.html
+++ b/clindesk/templates/_base.html
@@ -66,9 +66,7 @@
         <ul class="footer-links">
             <li><a href="/">Home</a></li>
             <li class="muted">&middot;</li>
-            <li><a href="/donate.html">Donate</a></li>
-            <li class="muted">&middot;</li>
-            <li><a href="/about.html#team">Contact Us</a></li>
+            <li><a href="/about.html#the-team">Contact Us</a></li>
         </ul>
     </div>
 </footer>
