--- a/whitecoatacademy/templates/about.html
+++ b/whitecoatacademy/templates/about.html
@@ -56,7 +56,7 @@
                   <span style="float:left; padding-right: 10px;"><img class="thumbnail" src="{{ static('img/heads/semenko.jpg') }}" width="150"/></span>
                   <span>Nick hails from M.I.T., where he served as Editor in Chief of the student newspaper The Tech. He's currently an MD/PhD student
                       in the lab of Dr. Jeffrey Gordon, where he's focused on developing bacteriophage therapeutics targeting the microbiome.
-                      <br/><br/><p>E-Mail: <a href="mailto:semenko@clindesk.org">semenko@clindesk.org</a></p>
+                      <br/><br/><p>E-Mail: <a href="mailto:semenko@whitecoatacademy.org">semenko@whitecoatacademy.org</a></p>
                   </span>
               </div>
               <div class="span6">
@@ -114,7 +114,7 @@
             <div class="row-fluid">
                 <p class="lead">White Coat Academy is a part of ClinDesk, Inc, a broader initiative to open the closed culture of medicine.</p>
                 <p class="lead">You can find our legal filings and financial reports at the <a href="http://www.clindesk.org/about.html#non-profit-governance" target="_blank"> ClinDesk site</a>.</p>
-                <p class="lead">We try to be as transparent as possible &mdash; if there's more you want to know, drop us a line at <a href="mailto:team@clindesk.org">team@clindesk.org</a>.</p>
+                <p class="lead">We try to be as transparent as possible &mdash; if there's more you want to know, drop us a line at <a href="mailto:team@whitecoatacademy.org">team@whitecoatacademy.org</a>.</p>
             </div>
         </section>
 
