--- a/whitecoatacademy/templates/_base.html
+++ b/whitecoatacademy/templates/_base.html
@@ -72,7 +72,7 @@
             <li class="muted">&middot;</li>
             <li><a href="/donate.html">Donate</a></li>
             <li class="muted">&middot;</li>
-            <li><a href="/about.html#team">Contact Us</a></li>
+            <li><a href="/about.html#the-team">Contact Us</a></li>
         </ul>
     </div>
 </footer>
