--- a/clindesk/templates/_analytics_code.html
+++ b/clindesk/templates/_analytics_code.html
@@ -6,12 +6,8 @@
 {%- elif "clindesk" in config.apphost -%}
   _gaq.push(['_setAccount', 'UA-32988270-1']);
 {% endif %}
-  _gaq.push(['_setSiteSpeedSampleRate', 100]);
-  _gaq.push(['_trackPageview']);
-  window.onerror = function(m, f, l) {
-    var err = [f, l, m].join(' : ');
-    _gaq.push(['_trackEvent', 'Errors', 'App', err, null, true]);
-  };
+  _gaq.push(['_setSiteSpeedSampleRate', 100]); _gaq.push(['_trackPageview']);
+  window.onerror = function(m, f, l) { var err = [f, l, m].join(' : '); _gaq.push(['_trackEvent', 'Errors', 'App', err, null, true]); };
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     ga.src = 'https://ssl.google-analytics.com/ga.js';
