--- a/whitecoatacademy/templates/_base.html
+++ b/whitecoatacademy/templates/_base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
+    <meta charset="utf-8">
     <title>{% block title %}{% endblock %} &mdash; White Coat Academy, Inc.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <meta name="description" content="{% block meta_description %}{% endblock %}" />
