--- a/whitecoatacademy/templates/_base.html
+++ b/whitecoatacademy/templates/_base.html
@@ -83,13 +83,13 @@
 {%- if config.apphost is defined -%}
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="{{ static('js/jquery.min.js') }}">\x3C/script>')</script>
+<script type="text/javascript" src="{{ static('js/shared.min.js') }}"></script>
 <script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
 <script>$('body').popover || document.write('<script src="{{ static('js/bootstrap.min.js') }}">\x3C/script>')</script>
-<script type="text/javascript" src="{{ static('js/shared.min.js') }}" async></script>
 {% else %}
 <script type="text/javascript" src="{{ static('js/jquery.min.js') }}"></script>
+<script type="text/javascript" src="{{ static('js/shared.js') }}"></script>
 <script type="text/javascript" src="{{ static('js/bootstrap.min.js') }}"></script>
-<script type="text/javascript" src="{{ static('js/shared.js') }}" async></script>
 {% endif %}
 </body>
 </html>
