--- a/clindesk/templates/_base.html
+++ b/clindesk/templates/_base.html
@@ -64,8 +64,8 @@
 <footer class="footer">
     <div class="container">
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2012 ClinDesk, Inc., some rights reserved</p>
-        <p>Videos are licensed under the Creative Commons <a href="https://creativecommons.org/licenses/by-nc-sa/3.0" target="_blank">CC BY NC SA 3.0</a> license.</p>
+        <p>&copy; 2013 ClinDesk, Inc., some rights reserved</p>
+	<p>Videos are licensed under a Creative Commons <a rel="license" href="//creativecommons.org/licenses/by-nc-sa/3.0/us/deed.en_US" target="_blank">CC BY NC SA 3.0</a> license.</p>
         <ul class="footer-links">
             <li><a href="/">Home</a></li>
             <li class="muted">&middot;</li>
