--- a/clindesk/templates/index.html
+++ b/clindesk/templates/index.html
@@ -18,6 +18,7 @@
                     <li>Open USMLE prep materials, including a Goljan-esque Step I review series</li>
                     <li>A interactive physical exam tutorial, with key techniques and gunner-style facts (remember <a href="https://en.wikipedia.org/wiki/Duroziez%27s_sign" target="_blank">Duroziez's sign</a>?)</li>
                     <li>An H&amp;P/SOAP note wizard, with hints on important acronyms and diagnostics</li>
+                    <li>The <a href="http://www.vaccinatedoctors.org/">Vaccinate Doctors Initiative</a>, launching soon to advocate for influenza vaccines</li>
                 </ul>
             </p>
             <p>Hopefully we can change the face of medical education. If you're interested in helping out, please get in touch!</p><br>
