--- a/whitecoatacademy/templates/_base.html
+++ b/whitecoatacademy/templates/_base.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     {%- if config.apphost is defined -%}
     <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap.no-icons.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/2.0/css/font-awesome-protocol-less.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css" rel="stylesheet">
     <link href="{{ static('css/shared.min.css') }}" rel="stylesheet" />
     {% else %}
     <link href="{{ static('css/bootstrap.no-icons.min.css') }}" rel="stylesheet">
@@ -68,8 +68,8 @@
 <footer class="footer">
     <div class="container">
         <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2012 White Coat Academy, a part of <a href="http://www.clindesk.org/">ClinDesk, Inc.</a>, some rights reserved</p>
-        <p>Videos are licensed under the Creative Commons <a href="https://creativecommons.org/licenses/by-nc-sa/3.0" target="_blank">CC BY NC SA 3.0</a> license.</p>
+        <p>&copy; 2013 White Coat Academy, a part of <a href="http://www.clindesk.org/">ClinDesk, Inc.</a>, some rights reserved</p>
+        <p>Videos are licensed under a Creative Commons <a rel="license" href="//creativecommons.org/licenses/by-nc-sa/3.0/us/deed.en_US" target="_blank">CC BY NC SA 3.0</a> license.</p>
         <ul class="footer-links">
             <li><a href="/">Home</a></li>
             <li class="muted">&middot;</li>
