--- a/clindesk/templates/index.html
+++ b/clindesk/templates/index.html
@@ -11,12 +11,12 @@
         <div class="span12">
             <div class="hero-unit">
             <p class="lead">Welcome:</p>
-            <p>ClinDesk comprises a team of senior medical students and resident physicians who passionate about opening the otherwise closed world of medical knowledge.</p>
+            <p>ClinDesk comprises a team of senior medical students and resident physicians who are passionate about opening the otherwise closed world of medical knowledge.</p>
             <p>Soon, we'll be launching lots of Creative Commons-licensed medical resources, including:
                 <ul>
                     <li>Free medical education videos, through our sister-site <a href="http://www.WhiteCoatAcademy.org/" target="_blank">White Coat Academy</a></li>
                     <li>Open USMLE prep materials, including a Goljan-esque Step I review series</li>
-                    <li>A interactive physical exam tutorial, with key techniques and gunner-style facts (remember <a href="https://en.wikipedia.org/wiki/Duroziez%27s_sign" target="_blank">Duroziez's sign</a>?)</li>
+                    <li>An interactive physical exam tutorial, with key techniques and gunner-style facts (remember <a href="https://en.wikipedia.org/wiki/Duroziez%27s_sign" target="_blank">Duroziez's sign</a>?)</li>
                     <li>An H&amp;P/SOAP note wizard, with hints on important acronyms and diagnostics</li>
                     <li>The <a href="http://www.vaccinatedoctors.org/">Vaccinate Doctors Initiative</a>, launching soon to advocate for influenza vaccines</li>
                 </ul>
