--- a/whitecoatacademy/templates/_base.html
+++ b/whitecoatacademy/templates/_base.html
@@ -81,8 +81,8 @@
 </footer>
 
 {%- if config.apphost is defined -%}
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{ static('js/jquery.min.js') }}">\x3C/script>')</script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="{{ static('js/jquery-1.9.0.min.js') }}">\x3C/script>')</script>
 <script type="text/javascript" src="{{ static('js/shared.min.js') }}"></script>
 <script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script>
 <script>$('body').popover || document.write('<script src="{{ static('js/bootstrap.min.js') }}">\x3C/script>')</script>
