Cleanup text, drop per-user e-mails.

--- a/templates/about.html
+++ b/templates/about.html
@@ -51,8 +51,7 @@
                   </h4>
                   <span style="float:left; padding-right: 10px;"><img class="thumbnail" src="{{ static('img/heads/semenko.jpg') }}" width="150"/></span>
                   <span>Nick hails from M.I.T., where he served as Editor in Chief of the student newspaper The Tech. He's currently an MD/PhD student
-                      in the lab of Dr. Jeffrey Gordon, where he's focused on developing bacteriophage therapeutics targeting the microbiome.
-                      <br/><br/><p>E-Mail: <a href="mailto:semenko@clindesk.org">semenko@clindesk.org</a></p>
+                      in the lab of Dr. Jeffrey Gordon, where he's focused on the microbiome.</p>
                   </span>
               </div>
               <div class="span6">
@@ -64,9 +63,8 @@
                       </span>
                   </h4>
                   <span style="float:left; padding-right: 10px;"><img class="thumbnail" src="{{ static('img/heads/dgermain.jpg') }}" width="150"/></span>
-                  <span>David spent his undergrad at Stanford and will one day cure leukemia. He's currently an MD/PhD student in the lab of Dr. Tim Ley,
-                        focused on epigenetic regulatory mechanisms of AML. When not at lab, he spends time entertaining his magnificient cat, Osmo.
-                      <br/><br/><p>E-Mail: <a href="mailto:dgermain@clindesk.org">dgermain@clindesk.org</a></p>
+                  <span>David spent his undergrad at Stanford and is currently an MD/PhD student in the lab of Dr. Tim Ley,
+                        focused on epigenetic regulatory mechanisms of AML. When not at lab, he spends time entertaining his cat, Osmo.</p>
                   </span>
               </div>
           </div>
@@ -79,9 +77,8 @@
                       </span>
                   </h4>
                   <span style="float:left; padding-right: 10px;"><img class="thumbnail" src="{{ static('img/heads/rayjean.jpg') }}" width="150"/></span>
-                  <span>Ray did his undergrad at Harvard where he was an engineering major. He's now a fourth year medical student, taking a year off to
-                      expand the world's medical knowledge while doing research with Dr. Jay Picarillo.
-                      <br/><br/><br/><p>E-Mail: <a href="mailto:rayjean@clindesk.org">rayjean@clindesk.org</a></p>
+                  <span>Ray did his undergrad at Harvard where he was an engineering major. He's now a fourth year medical student at Washington University,
+                      taking a year off to do research with Dr. Jay Picarillo.</p>
                   </span>
               </div>
               <div class="span6">
@@ -92,9 +89,8 @@
                       </span>
                   </h4>
                   <span style="float:left; padding-right: 10px;"><img class="thumbnail" src="{{ static('img/heads/aaronm.jpg') }}" width="150"/></span>
-                  <span>Aaron spent his undergrad years at Stanford, and is currently a fourth year medical student. After his residency, Aaron will
-                      likely direct operations and innovation at a large academic medical center.
-                      <br/><br/><br/><p>E-Mail: <a href="mailto:aaronm@clindesk.org">aaronm@clindesk.org</a></p>
+                  <span>Aaron spent his undergrad years at Stanford where he studied Symbolic Systems. He is currently a fourth year medical student.
+                        Aaron is also working on a number of small-scale health innovations.</p>
                   </span>
               </div>
 
