--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li>Free medical education videos, through our sister-site <a href="http://www.WhiteCoatAcademy.org/" target="_blank">White Coat Academy</a></li>
                     <li>Open USMLE prep materials, including a Goljan-esque Step I review series</li>
-                    <li>An interactive physical exam tutorial featuring and gunner-style facts (remember <a href="https://en.wikipedia.org/wiki/Duroziez%27s_sign" target="_blank">Duroziez's sign</a>?)</li>
+                    <li>An interactive physical exam tutorial featuring gunner-style facts (remember <a href="https://en.wikipedia.org/wiki/Duroziez%27s_sign" target="_blank">Duroziez's sign</a>?)</li>
                     <li>An H&amp;P/SOAP note wizard, with hints on important acronyms and diagnostics</li>
                     <li>The <a href="http://www.vaccinatedoctors.org/">Vaccinate Doctors Initiative</a>, advocating for influenza vaccines</li>
                 </ul>
