--- a/templates/_base.html
+++ b/templates/_base.html
@@ -4,50 +4,56 @@
 <head>
     <meta charset="utf-8">
     <title>{% block title %}{% endblock %} &mdash; ClinDesk, Inc.</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="{% block meta_description %}{% endblock %}" />
     <meta name="author" content="{% block meta_author %}Nick Semenkovich (@semenko), ClinDesk &amp; White Coat Academy{% endblock %}" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
-    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css" rel="stylesheet">
-    <link href="{{ static('css/shared.css') }}" rel="stylesheet" />
+
+    {%- if config.apphost is defined -%}
+    {# Building for production. Use the CDN minified versions. #}
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ static('css/cd-style.css') }}" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+    <!-- Only serve analytics code in prod. -->
     {% include '_analytics_code.html' %}
+    {% else %}
+    {# Running locally. Use local versions (e.g. work on airplanes!) #}
+    <link href="{{ static('css/bootstrap-3.0.2.css') }}" rel="stylesheet">
+    <link href="{{ static('css/cd-style.css') }}" rel="stylesheet">
+    <link href="{{ static('css/font-awesome-4.0.3.css') }}" rel="stylesheet">
+    {% endif %}
+
     <!--[if lt IE 8]><script src="//ie6-upgrade-warning.googlecode.com/svn/trunk/ie6/warning.js"></script><script>window.onload=function(){e("//ie6-upgrade-warning.googlecode.com/svn/trunk/ie6/")}</script><![endif]-->
-    <!--[if lt IE 9]><script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"></script><![endif]-->
-    {#
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ static('img/ico/apple-touch-icon-144-precomposed.png') }}">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ static('img/ico/apple-touch-icon-114-precomposed.png') }}">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{{ static('img/ico/apple-touch-icon-72-precomposed.png') }}">
-    <link rel="apple-touch-icon-precomposed" href="{{ static('img/ico/apple-touch-icon-57-precomposed.png') }}">
-    #}
+    <!--[if lt IE 9]><script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script><![endif]-->
+    {# TODO: Add Apple Touch icons & massive favicons. #}
+
 </head>
-<body data-spy="scroll" data-target=".bs-docs-sidebar">
+<body>
 
-<div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="brand" href="/"><img src="{{ static('img/content/logo_sml.png') }}" alt="ClinDesk, Inc."></a>
-            <!-- Things that get hidden at <= 940px -->
-            <div class="nav-collapse collapse">
-                <ul class="nav">
-                    <li><a href="/">Home</a></li>
-                    {# <li><a href="/donate.html">Support Us</a></li> #}
-                    <li><a href="/about.html">About Us</a></li>
-                </ul>
-                <form class="navbar-search pull-right" action="/search.html" id="searchform" role="search">
-                    <input type="hidden" name="cx" value="002941556813235485135:eikq6dcpctw"><input type="hidden" name="cof" value="FORID:11">
-                    <input type="text" class="search-query span2" name="q" placeholder="Search">
-                </form>
-            </div>
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+            {# TODO: Remove this style override. Boo. #}
+          <a class="navbar-brand" href="/" style="padding: 10px"><img src="{{ static('img/content/logo_sml.png') }}" alt="ClinDesk, Inc."></a>
         </div>
-    </div>
-</div>
 
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/calc/">Medical Calculators</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container -->
+    </nav>
+
+{#
 <header class="jumbotron {% block jumbotron_class %}subhead{% endblock %}" id="overview">
     <div class="container">
         <h1>{% block tagline_text %}tagline_text{% endblock %}</h1>
@@ -55,32 +61,44 @@
         {% block extra_jumbotron %}{% endblock %}
     </div>
 </header>
+    #}
 
 {% block maincontent %}maincontent{% endblock %}
 
-<footer class="footer">
-    <div class="container">
-        <p class="pull-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2013 ClinDesk, Inc., some rights reserved</p>
-	<p>Videos are licensed under a Creative Commons <a rel="license" href="//creativecommons.org/licenses/by-nc-sa/3.0/us/deed.en_US" target="_blank">CC BY NC SA 3.0</a> license.</p>
-        <ul class="footer-links">
-            <li><a href="/">Home</a></li>
-            <li class="muted">&middot;</li>
-            <li><a href="/about.html#the-team">Contact Us</a></li>
-        </ul>
-    </div>
-</footer>
+
+<div class="container">
+    <hr>
+
+    <footer>
+        <div class="row">
+            <div class="col-lg-12">
+                <p>&copy; 2013 ClinDesk, Inc., some rights reserved</p>
+                <p>Videos are licensed under a Creative Commons <a rel="license" href="//creativecommons.org/licenses/by-nc-sa/3.0/us/deed.en_US" target="_blank">CC BY NC SA 3.0</a> license.</p>
+            </div>
+        </div>
+    </footer>
+
+</div><!-- /.container -->
+
 
 {%- if config.apphost is defined -%}
-<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="{{ static('js/jquery-1.9.1.min.js') }}">\x3C/script>')</script>
-<script type="text/javascript" src="{{ static('js/shared.js') }}"></script>
-<script type="text/javascript" src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/js/bootstrap.min.js"></script>
-<script>$('body').popover || document.write('<script src="{{ static('js/bootstrap-2.3.0.min.js') }}">\x3C/script>')</script>
+{# Building for production. Use the CDN minified versions. #}
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<!-- This crazy code is failover if a CDN is blocked / fails. -->
+<script>window.jQuery || document.write('<script src="{{ static('js/jquery-1.10.2.min.js') }}">\x3C/script>')</script>
+<script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
+<!-- This crazy code is failover if a CDN is blocked / fails. -->
+<script>$('body').popover || document.write('<script src="{{ static('js/bootstrap-3.0.2.min.js') }}">\x3C/script>')</script>
+<script src="{{ static('js/cd-scripts.js') }}"></script>
 {% else %}
-<script type="text/javascript" src="{{ static('js/jquery-1.9.1.min.js') }}"></script>
-<script type="text/javascript" src="{{ static('js/shared.js') }}"></script>
-<script type="text/javascript" src="{{ static('js/bootstrap-2.3.0.min.js') }}"></script>
+{# Running locally. Use local versions (e.g. work on airplanes!) #}
+<script src="{{ static('js/jquery-1.10.2.js') }}"></script>
+<script src="{{ static('js/bootstrap-3.0.2.js') }}"></script>
+<script src="{{ static('js/cd-scripts.js') }}"></script>
 {% endif %}
-</body>
+
+
+  </body>
 </html>
+
+
