--- a/templates/_base.html
+++ b/templates/_base.html
@@ -85,10 +85,10 @@
 {# Building for production. Use the CDN minified versions. #}
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <!-- This crazy code is failover if a CDN is blocked / fails. -->
-<script>window.jQuery || document.write('<script src="{{ static('js/jquery-1.10.2.min.js') }}">\x3C/script>')</script>
+<script>window.jQuery || document.write('<script src="{{ static('js/jquery-1.10.2.js') }}">\x3C/script>')</script>
 <script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 <!-- This crazy code is failover if a CDN is blocked / fails. -->
-<script>$('body').popover || document.write('<script src="{{ static('js/bootstrap-3.0.2.min.js') }}">\x3C/script>')</script>
+<script>$('body').popover || document.write('<script src="{{ static('js/bootstrap-3.0.2.js') }}">\x3C/script>')</script>
 <script src="{{ static('js/cd-scripts.js') }}"></script>
 {% else %}
 {# Running locally. Use local versions (e.g. work on airplanes!) #}
