--- a/templates/about.html
+++ b/templates/about.html
@@ -2,6 +2,11 @@
 {% block title %}About Us{% endblock %}
 {% block tagline_text %}About Us{% endblock %}
 {% block lead %}About ClinDesk &amp; White Coat Academy{% endblock %}
+
+{# We want a breadcrumb / header block. #}
+{% set header_title = "About" %}
+{% set header_text = "Open Source Clinical Resources" %}
+
 {% block maincontent%}
 <div class="container">
 
