+ OpenSans, layout adjustments

--- a/s/css/cd-style.css
+++ b/s/css/cd-style.css
@@ -12,6 +12,10 @@ body {
   padding-top: 50px; /* body padding for fixed top nav */
 }
 
+h1,h2,h3,h4,h5,h6 {
+     font-family: 'Open Sans', sans-serif;
+}
+
 .img-home-portfolio,
 .img-customer,
 .portfolio-item {
