--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
 
 {# We want a breadcrumb / header block. #}
 {% set header_title = "About" %}
-{% set header_text = "Open Source Clinical Resources" %}
+{% set header_text = "Our Team" %}
 
 {% block maincontent%}
 <div class="container">
