--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,8 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2>Welcome to ClinDesk: Opening Medical Education</h2>
-                <p>Bringing open source &amp collaborative resources to medicine.</p>
+                <h1>Welcome to ClinDesk: Opening Medical Education</h1>
+                <h3>Bringing open source resources to medicine.</h3>
                 <hr>
             </div>
         </div><!-- /.row -->
@@ -31,10 +31,10 @@
 
         <div class="row well">
             <div class="col-lg-8 col-md-8">
-                <h4>New: Try out clinical calculators and medical calculator apps.</h4>
-                <p>Including Framingham risk, MELD, Ranson, CHADS2, TIMI, Warfarin dosing &hellip; </p>
+                <h3>New: Try out clinical calculators and medical calculator apps.</h3>
+                <h5>Including Framingham risk, MELD, Ranson, CHADS2, TIMI, Warfarin dosing &hellip; </h5>
             </div>
-            <div class="col-lg-4 col-md-4">
+            <div class="col-lg-4 col-md-4"><br>
                 <a class="btn btn-lg btn-primary pull-right" href="/calc/">Try our Medical Calculators &rarr;</a>
             </div>
         </div><!-- /.row -->
