--- a/templates/_base.html
+++ b/templates/_base.html
@@ -9,11 +9,15 @@
     <meta name="author" content="{% block meta_author %}Nick Semenkovich (@semenko), ClinDesk &amp; White Coat Academy{% endblock %}" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
 
+    {# Move this to local dependent code! #}
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+
     {%- if config.apphost is defined -%}
     {# Building for production. Use the CDN minified versions. #}
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="{{ static('css/cd-style.css') }}" rel="stylesheet">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">
+
     <!-- Only serve analytics code in prod. -->
     {% include '_analytics_code.html' %}
     {% else %}
@@ -54,17 +58,17 @@
 </nav>
 
 {% if header_title and header_text %}
-    <div class="container">
-      <div class="row">
+<div class="container">
+    <div class="row">
         <div class="col-lg-12">
-          <h1 class="page-header">{{ header_title }} <small>{{ header_text }}</small></h1>
-          <ol class="breadcrumb">
-            <li><a href="/">Home</a></li>
-            <li class="active">{{ header_title }}</li>
-          </ol>
+            <h1 class="page-header">{{ header_title }} <small>{{ header_text }}</small></h1>
+            <ol class="breadcrumb">
+                <li><a href="/">Home</a></li>
+                <li class="active">{{ header_title }}</li>
+            </ol>
         </div>
-      </div>
-        </div>
+    </div>
+</div>
 {% endif %}
 
 {#
